git/branching: new branching slides

--- a/git/Makefile
+++ b/git/Makefile
@@ -1,5 +1,5 @@
-SOURCES=menu.md basics.md
-DEST=menu.html basics.html
+SOURCES=menu.md basics.md branching.md
+DEST=menu.html basics.html branching.html
 
 all: $(DEST)
 
@@ -7,6 +7,9 @@ menu.html: menu.md
 		pandoc --offline -s -t slidy -o $@ $<
 
 basics.html: basics.md
+		pandoc --offline -s -t slidy -o $@ $<
+
+branching.html: branching.md
 		pandoc --offline -s -t slidy -o $@ $<
 
 clean:
