Split Git presentation
I realized that the basics.md file was too heavy and covered multiple
topics. I splitted all topics and now this is the structure: 1. Basics,
2. Branching, 3. Collaboration, 4. Tags and finally 5. Tips and Tricks.

--- a/git/Makefile
+++ b/git/Makefile
@@ -1,5 +1,5 @@
-SOURCES=menu.md basics.md branching.md
-DEST=menu.html basics.html branching.html
+SOURCES=menu.md basics.md branching.md collaboration.md tags.md tips_tricks.md
+DEST=menu.html basics.html branching.html collaboration.html tags.html tips_tricks.html
 
 all: $(DEST)
 
@@ -10,6 +10,15 @@ basics.html: basics.md
 		pandoc --offline -s -t slidy -o $@ $<
 
 branching.html: branching.md
+		pandoc --offline -s -t slidy -o $@ $<
+
+collaboration.html: collaboration.md
+		pandoc --offline -s -t slidy -o $@ $<
+		
+tags.html: tags.md
+		pandoc --offline -s -t slidy -o $@ $<		
+
+tips_tricks.html: tips_tricks.md
 		pandoc --offline -s -t slidy -o $@ $<
 
 clean:
