--- a/yocto/Makefile
+++ b/yocto/Makefile
@@ -1,7 +1,8 @@
 SOURCES=menu.md folders.md 8steps.md arch.md meta_input.md
 DEST=menu.html folders.html 8steps.html arch.html meta_input.html
+SUBDIRS = common_tasks
 
-all: $(DEST)
+all: $(DEST) $(SUBDIRS)
 
 menu.html: menu.md
 		pandoc --offline -s -t slidy -o $@ $<
@@ -17,6 +18,13 @@ arch.html: arch.md
 
 meta_input.html: meta_input.md
 		pandoc --offline -s -t slidy -o $@ $<
+
+.PHONY: subdirs $(SUBDIRS)
+     
+subdirs: $(SUBDIRS)
+     
+$(SUBDIRS):
+		$(MAKE) -C $@
 
 clean:
 		-rm -f *.html
