yocto: Patching kernel instructions

--- a/yocto/common_tasks/Makefile
+++ b/yocto/common_tasks/Makefile
@@ -1,8 +1,11 @@
-SOURCES=layer.md
-DEST=layer.html
+SOURCES=layer.md patching_kernel.md
+DEST=layer.html patching_kernel.html
 
 all: $(DEST)
 
 layer.html: layer.md
+		pandoc --offline -s -t slidy -o $@ $<
+
+patching_kernel.html: patching_kernel.md
 		pandoc --offline -s -t slidy -o $@ $<
 
