Building the kernel manual instructions

--- a/yocto/common_tasks/Makefile
+++ b/yocto/common_tasks/Makefile
@@ -1,5 +1,5 @@
-SOURCES=layer.md patching_kernel.md
-DEST=layer.html patching_kernel.html
+SOURCES=layer.md patching_kernel.md building_kernel.md
+DEST=layer.html patching_kernel.html building_kernel.html
 
 all: $(DEST)
 
@@ -9,3 +9,5 @@ layer.html: layer.md
 patching_kernel.html: patching_kernel.md
 		pandoc --offline -s -t slidy -o $@ $<
 
+building_kernel.html: building_kernel.md
+		pandoc --offline -s -t slidy -o $@ $<
