common_tasks: New Contribute slide

--- a/yocto/common_tasks/Makefile
+++ b/yocto/common_tasks/Makefile
@@ -1,5 +1,5 @@
-SOURCES=layer.md patching_kernel.md building_kernel.md
-DEST=layer.html patching_kernel.html building_kernel.html
+SOURCES=layer.md patching_kernel.md building_kernel.md contribute.mb
+DEST=layer.html patching_kernel.html building_kernel.html contribute.html
 
 all: $(DEST)
 
@@ -10,4 +10,7 @@ patching_kernel.html: patching_kernel.md
 		pandoc --offline -s -t slidy -o $@ $<
 
 building_kernel.html: building_kernel.md
+		pandoc --offline -s -t slidy -o $@ $<
+
+contribute.html: contribute.md
 		pandoc --offline -s -t slidy -o $@ $<
