Split main Makefile into html and pdf

--- a/makefile_html
+++ b/makefile_html
@@ -12,7 +12,7 @@ menu.html: menu.md
 subdirs: $(SUBDIRS)
      
 $(SUBDIRS):
-		$(MAKE) -C $@
+		$(MAKE) -f makefile_html -C $@
 
 clean:
 		-rm -f *.html
