replace offline to self-contained pandoc parameter for html output files

--- a/makefile_html
+++ b/makefile_html
@@ -5,7 +5,7 @@ SUBDIRS = tools yocto
 all: $(DEST) $(SUBDIRS)
 
 menu.html: menu.md
-		pandoc --offline -s -t slidy -o $@ $<
+		pandoc --self-contained -s -t slidy -o $@ $<
 
 .PHONY: subdirs $(SUBDIRS)
      
