--- a/tools/bash/Makefile
+++ b/tools/bash/Makefile
@@ -4,25 +4,25 @@ DEST=menu.html basics.html stdout.html stdin.html exec.html scripting.html tools
 all: $(DEST)
 
 menu.html: menu.md
-		pandoc --offline -s -t slidy -o $@ $<
+		pandoc --self-contained -s -t slidy -o $@ $<
 
 basics.html: basics.md
-		pandoc --offline -s -t slidy -o $@ $<
+		pandoc --self-contained -s -t slidy -o $@ $<
 
 stdout.html: stdout.md
-		pandoc --offline -s -t slidy -o $@ $<
+		pandoc --self-contained -s -t slidy -o $@ $<
 
 stdin.html: stdin.md
-		pandoc --offline -s -t slidy -o $@ $<
+		pandoc --self-contained -s -t slidy -o $@ $<
 
 exec.html: exec.md
-		pandoc --offline -s -t slidy -o $@ $<
+		pandoc --self-contained -s -t slidy -o $@ $<
 
 scripting.html: scripting.md
-		pandoc --offline -s -t slidy -o $@ $<
+		pandoc --self-contained -s -t slidy -o $@ $<
 
 tools.html: tools.md
-		pandoc --offline -s -t slidy -o $@ $<
+		pandoc --self-contained -s -t slidy -o $@ $<
 
 clean:
 		-rm -f *.html
