i.MX/u-boot/Makefile: New rule to create a pdf with git rev on it

--- a/i.MX/u-boot/Makefile
+++ b/i.MX/u-boot/Makefile
@@ -1,5 +1,5 @@
 SOURCES= intro.md
-DEST= intro.html intro.pdf
+DEST= intro.html intro.pdf intro_dev.pdf
 all: $(DEST)
 
 intro.html: intro.md
@@ -7,6 +7,13 @@ intro.html: intro.md
 
 intro.pdf: intro.md
 		pandoc --self-contained -s -o $@ $<
+intro_dev.pdf: intro.md
+	cp intro.md intro_dev.md
+	echo '' >> intro_dev.md
+	echo '# Revision' >> intro_dev.md
+	echo '' >> intro_dev.md
+	git log --oneline -1 >> intro_dev.md
+	pandoc --self-contained -s -o $@ intro_dev.md
 
 clean:
 		rm -f *.html *.pdf
